--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,6 +1,6 @@
 *{
-    background-color: #3d0606;
-    color: #dcd7d7;
+    background-color: #0e0c0c;
+    color: #efe8e8;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -9,8 +9,8 @@
     font-size: 1rem;
     font-weight: 700;
     font-family: Arial, Helvetica, sans-serif;
-    filter: drop-shadow(4px 4px 4px rgb(216, 7, 7));
-    color:rgb(241, 223, 223);
+    filter: drop-shadow(4px 4px 4px rgb(21, 20, 20));
+    color:rgb(239, 234, 234);
 }
 .banner{
     background-image: url("https://occ-0-1009-448.1.nflxso.net/dnm/api/v6/6AYY37jfdO6hpXcMjf9Yu5cnmO0/AAAABeqU5y13eHjQ6rfOYnpZUi3Rs_tf8KhstGfq_LmpqDzeR0UmZ_Op7pNso4OFiL97UO-hwXayjoAue7TL_Okys9Q280u7XZJpbOle.jpg?r=834&quot");
