--- a/Portfolio.css
+++ b/Portfolio.css
@@ -1,6 +1,6 @@
 *{
     background-color: #090909;
-    color: #efe8e8;
+    color: #e3dede;
     margin: 0;
     padding: 0;
     box-sizing: border-box;
